# personalise-gpt

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
